# ondansetron

./: .gitignore  .vim_session.vim  AGENTS.md  AI_INSTRUCTIONS.md  CLAUDE.md  DOCUMENTATION.md  OpenCode.md  README.md  TODO.md  get_keys.py  memoire.docx  memoire.md  ondansetron.bib  ondansetron.ipynb  presentation.ipynb  pyproject.toml
.github/: copilot-instructions.md
.mcp/: tool_server.py  tools.py
.obsidian/: app.json  appearance.json  bookmarks.json  canvas.json  command-palette.json  community-plugins.json  core-plugins-migration.json  core-plugins.json  daily-notes.json  graph.json  hotkeys.json  note-composer.json  templates.json  text-generator.json  types.json  workspace-mobile.json  workspace.json  zk-prefixer.json
.opencode/: opencode.db-shm  opencode.db-wal
manuscript/: Makefile  memoire.bib  memoire.docx  memoire.md  memoire.tex
manuscript/archives/: old_references.md
manuscript/llm/: 250600-Perplexity.md
manuscript/tex/: ONDANSETRON.tex
manuscript/tex_old/: ondansetron.tex
ressources/: vector_index.faiss  vector_index.fpaths
sourcedata/: all_literature_analysis.json  all_trials_comprehensive.json  complete_historical_analysis.json  complete_historical_ondansetron_aud.json  comprehensive_analysis.json  new_trials.json  new_trials_2021_2024.json  trials.json  trials_old.json
sourcedata/2020/: Ondansetron_matiasceauV4.docx
sourcedata/2021/: OndansetronV5-.docx
sourcedata/2021-05-02/: OndansetronV4-20210502.docx  ROB2_IRPG_beta_v7.xlsm
sourcedata/2022-01-07/: vF2022rom.docx
src/ondansetron/: __init__.py  (+9 more)
tests/: test_search.py
(+65 files in other folders)
