[project]
name = "ondansetron"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matias Ceau", email = "matias@ceau.net" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
ondansetron = "ondansetron:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
