[project]
name = "ondansetron"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matias Ceau", email = "matias@ceau.net" }
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.4",
    "openai>=1.78.1",
]

[project.scripts]
ondansetron = "ondansetron:main"
ondansetron-search = "ondansetron.search:main"
ondansetron-update-trials = "ondansetron.update_trials:main"
ondansetron-review = "ondansetron.review:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
